force-app/main/default/objects/PromotionLineItem__c/PromotionLineItem__c.object-meta.xml
<CustomObject>
    <label>Promotion Line Item</label>
    <nameField>
        <displayFormat>PLI-{000000}</displayFormat>
        <label>Promotion Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>