force-app/main/default/objects/PromotionLineItem__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Promotion นี้ยังสามารถใช้งานได้หรือไม่

หากอยู่ในวันที่ระหว่าง Active From และ Active To จะมีค่าเป็น True หากไม่อยู่ในช่วงระหว่างนั้นจะมีค่าเป้น False</description>
    <formula>IF(  ActiveFrom__c  &lt; DATETIMEVALUE(TODAY())&amp;&amp; DATETIMEVALUE(TODAY()) &lt;  ActiveTo__c , TRUE, FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>