force-app/main/default/objects/PromotionLineItem__c/fields/ActiveFrom__c.field-meta.xml
<CustomField>
    <fullName>ActiveFrom__c</fullName>
    <description>Promotion นี้จะใช้ได้ตั้งแต่</description>
    <label>Active From</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>