force-app/main/default/objects/PromotionLineItem__c/fields/ActiveTo__c.field-meta.xml
<CustomField>
    <fullName>ActiveTo__c</fullName>
    <description>Promotion นี้ี้จะใช้ได้จนถึง</description>
    <label>Active To</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>