force-app/main/default/objects/PromotionLineItem__c/fields/Condition_In_Booking_and_Contract__c.field-meta.xml
<CustomField>
    <fullName>Condition_In_Booking_and_Contract__c</fullName>
    <description>เงื่อนไข Promotion ที่จะใส่ในใบจองและใบทำสัญญา</description>
    <label>Condition (In Booking and Contract)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>