force-app/main/default/objects/PromotionLineItem__c/fields/IsStandard__c.field-meta.xml
<CustomField>
    <fullName>IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>เป้น Standard Promotion หรือไม่</description>
    <label>IsStandard</label>
    <type>Checkbox</type>
</CustomField>