force-app/main/default/objects/PromotionLineItem__c/fields/PromotionbyFloor__c.field-meta.xml
<CustomField>
    <fullName>PromotionbyFloor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Promotion นี้ถูกใช้ใน Floor ใด</description>
    <label>Promotion by Floor</label>
    <referenceTo>Floor__c</referenceTo>
    <relationshipLabel>Promotion Line Items</relationshipLabel>
    <relationshipName>Promotion_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>