force-app/main/default/objects/PromotionLineItem__c/fields/PromotionbyPhase__c.field-meta.xml
<CustomField>
    <fullName>PromotionbyPhase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Promotion นี้ถูกใช้ใน Phase ใด</description>
    <label>Promotion by Phase</label>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Promotion Line Items</relationshipLabel>
    <relationshipName>Promotion_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>