force-app/main/default/objects/PromotionLineItem__c/fields/PromotionbyUnit__c.field-meta.xml
<CustomField>
    <fullName>PromotionbyUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Promotion นี้ถูกใช้ใน Unit ใด</description>
    <label>Promotion by Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Promotion Line Items</relationshipLabel>
    <relationshipName>Promotion_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>