force-app/main/default/objects/PromotionLineItem__c/fields/PromotionMaster__c.field-meta.xml
<CustomField>
    <fullName>PromotionMaster__c</fullName>
    <description>เป็น Promotion Line Item ที่ใช้อยู่ใน Promotion Master ใด</description>
    <label>Promotion Master</label>
    <referenceTo>PromotionMaster__c</referenceTo>
    <relationshipLabel>Promotion Line Items</relationshipLabel>
    <relationshipName>Promotion_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>