force-app/main/default/objects/PromotionLineItem__c/fields/PromotionValue__c.field-meta.xml
<CustomField>
    <fullName>PromotionValue__c</fullName>
    <description>ราคาส่วนลดหากเลือกของไปแล้ว</description>
    <label>Promotion Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>